tests/baselines/reference/parserClassDeclaration8.errors.txt
==== tests/cases/compiler/parserClassDeclaration8.ts (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~
!!! parserClassDeclaration8.ts(2,3): error TS2240: Constructor implementation expected.
    }